# brew

./: .gitignore  LICENSE  README.md  Taskfile.yml  product.md
.cursor/rules/: taskfile.mdc  uv.mdc
.task/checksum/: backend-install
application/: README.md  Taskfile.yml  pyproject.toml  run_api.py
application/brewing/: __init__.py  api.py  cli.py  models.py
application/brewing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
application/www/: .env.development  FLOATING_MENU_README.md  Taskfile.yml  index.html  package-lock.json  package.json  vite.config.ts
application/www/src/: App.css  App.tsx  Navbar.tsx  Tiptap.tsx  index.css  main.tsx
application/www/src/components/: FeatureEditor.tsx
application/www/src/components/floating-element/: floating-element.tsx
application/www/src/components/tiptap-ui-primitive/button/: button.tsx
application/www/src/components/tiptap-ui-primitive/button-group/: index.tsx
application/www/src/components/tiptap-ui-primitive/toolbar/: toolbar.tsx
application/www/src/components/tiptap-ui/mark-button/: mark-button.tsx  use-mark.ts
application/www/src/features/projects/: dtos.ts  queries.ts
application/www/src/features/specifications/: collection.ts  dtos.ts  queries.ts
application/www/src/features/specifications/components/: IconPicker.tsx
application/www/src/features/specifications/hooks/: useLiveGetSpecification.ts
application/www/src/features/system/: queries.ts
application/www/src/layouts/: SidebarLayout.tsx
application/www/src/lib/: api.ts
application/www/src/pages/: EditorPage.tsx  FeaturePage.tsx  FeaturesPage.tsx  SetupPage.tsx
mock/.brewing/: database.db  project.json
